--- a/disclosure.html
+++ b/disclosure.html
@@ -5,6 +5,7 @@
     <script type='text/javascript' src='https://cdn.sdslabs.co.in/cdnjs/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" href="/favicon.ico" />
     <title>Disclosure - Privacy & Security - SDSLabs</title>
     <meta name="author" content="Team SDSLabs">
 	  <link rel="stylesheet" href="/home/topbarwide.css">
